# assemblyline-service-emuunpacker

./: .cruft.json  Dockerfile  Makefile  README.md  pyproject.toml  service_manifest.yml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
emuunpacker/: emuunpacker.py
emuunpacker/unpacker/: __init__.py  error.py  unipacker.py
pipelines/: azure-build.yaml
tests/: Dockerfile  build-samples.sh  extra-setup.sh  pytest.sh  sources.md  test_emuunpacker_samples.py  test_unipacker.py
tests/samples/: sources.md
tests/samples-src/: Makefile  test0.c
